crates/derive/src/snapshots/derive__combine_api__test__combine_with_defaults_array.snap
---
source: crates/derive/src/combine_api.rs
expression: "run_simple_svc(schema_json, key_ptrs, field_ptrs, &docs)"
---
[
    [
        "{\"aKey\":\"a\"}",
        "\u{2}a\0",
        "\u{2}firstDefault\0\u{2}secondDefault\0\0\0",
    ],
]
