crates/derive/src/snapshots/derive__combine_api__test__combine_with_defaults_different_types.snap
---
source: crates/derive/src/combine_api.rs
expression: "run_simple_svc(schema_json, key_ptrs, field_ptrs, &docs)"
---
[
    [
        "{\"aKey\":\"a\"}",
        "\u{2}a\0",
        "\u{15}\u{7}!�(������\u{2}defaultString\0'\u{1}{\"prop\":\"val\"}\0\u{1}[1,\"hello\",null]\0",
    ],
]
