crates/derive/src/snapshots/derive__combine_api__test__combine_with_defaults_nested.snap
---
source: crates/derive/src/combine_api.rs
expression: "run_simple_svc(schema_json, key_ptrs, field_ptrs, &docs)"
---
[
    [
        "{\"aKey\":\"a\",\"intProp\":3}",
        "\u{2}a\0",
        "\u{2}nestedValNoDefaultParent\0\0\u{2}nestedValWithDefaultParent\0\u{1}{\"other\":\"thing\"}\0",
    ],
]
